bin_PROGRAMS = cholesky_decomposition givens_rotation householder_transform least_squares lsp nnls qr_decomposition singular_decomposition
AM_CPPFLAGS = -I @abs_top_srcdir@/include -DTEST

cholesky_decomposition_SOURCES = cholesky_decomposition.cpp
givens_rotation_SOURCES = givens_rotation.cpp
householder_transform_SOURCES = householder_transform.cpp
least_squares_SOURCES = least_squares.cpp
lsp_SOURCES = lsp.cpp
nnls_SOURCES = nnls.cpp
qr_decomposition_SOURCES = qr_decomposition.cpp
singular_decomposition_SOURCES = singular_decomposition.cpp

EXTRA_DIST = test_generator.pl maxima_wrapper.pl
